# NER_BERT

./: .gitignore  NER_BERT.ipynb  README.md  inference_NER.py  pyproject.toml  requirements.txt  train_NER.py  ua_mountains.txt  ua_text.txt
